force-app/main/default/objects/Service_Request_New__c/Service_Request_New__c.object-meta.xml
<CustomObject>
    <description>Represents a single garage service/repair job (work order) for a vehicle. Tracks status, assigned worker, promised and actual completion dates, estimate and final amount, discount approval, and warranty period for the service performed.</description>
    <label>Service Request</label>
    <nameField>
        <displayFormat>SR-{00000}</displayFormat>
        <label>Service Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>