force-app/main/default/objects/Service_Request_New__c/fields/Actual_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Completion_Date__c</fullName>
    <description>The date the service was actually finished, automatically set when status changes to Completed.</description>
    <label>Actual Completion Date</label>
    <type>Date</type>
</CustomField>