force-app/main/default/objects/Service_Request_New__c/fields/Assigned_Worker__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Worker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The worker assigned to perform this service. Populating this field triggers an automatic notification to the worker and transfers record ownership to them.</description>
    <label>Assigned Worker</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>