force-app/main/default/objects/Service_Request_New__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The customer who requested this service. Used as the recipient for all automated notifications related to this service request.</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Service Request</relationshipLabel>
    <relationshipName>Customer_Services</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>