force-app/main/default/objects/Service_Request_New__c/fields/Discount_Approved__c.field-meta.xml
<CustomField>
    <fullName>Discount_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the proposed discount has been approved by a manager.</description>
    <label>Discount Approved</label>
    <type>Checkbox</type>
</CustomField>