force-app/main/default/objects/Service_Request_New__c/fields/Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percent__c</fullName>
    <description>Discount percentage proposed for this service, subject to manager approval before being applied to the final amount.</description>
    <label>Discount Percent</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>