force-app/main/default/objects/Service_Request_New__c/fields/Estimate_Amount_New__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Amount_New__c</fullName>
    <label>Estimate Amount New</label>
    <summarizedField>Service_Line_Item__c.Line_Total__c</summarizedField>
    <summaryForeignKey>Service_Line_Item__c.Service_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>