force-app/main/default/objects/Service_Request_New__c/fields/Final_Amount__c.field-meta.xml
<CustomField>
    <fullName>Final_Amount__c</fullName>
    <formula>IF(Discount_Approved__c,  Estimate_Amount_New__c  - (Estimate_Amount_New__c * Discount_Percent__c/100), Estimate_Amount_New__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>