force-app/main/default/objects/Service_Request_New__c/fields/Manager_Comments__c.field-meta.xml
<CustomField>
    <fullName>Manager_Comments__c</fullName>
    <description>Comments entered by the approving manager when approving or rejecting a discount request, visible to the original submitter.</description>
    <label>Manager Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>