force-app/main/default/objects/Service_Request_New__c/fields/Promised_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Promised_Completion_Date__c</fullName>
    <description>The date the customer was told their vehicle would be ready.
Sent to the customer in the initial service notification email.</description>
    <label>Promised Completion Date</label>
    <type>Date</type>
</CustomField>