force-app/main/default/objects/Service_Request_New__c/fields/Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>The date the customer requested this service</description>
    <label>Requested Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>