force-app/main/default/objects/Service_Request_New__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <description>The category of service being performed, used for reporting and to help route or prioritize the request appropriately.</description>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Routine Maintenance</fullName>
            </value>
            <value>
                <fullName>Warranty Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>