force-app/main/default/objects/Service_Request_New__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The vehicle this service request was created for. Used to retrieve vehicle details for worker assignment notifications and to update the vehicle&apos;s service history.</description>
    <label>Vehicle</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>