force-app/main/default/objects/Service_Request_New__c/fields/Warranty_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Expiry_Date__c</fullName>
    <formula>Actual_Completion_Date__c + (Warranty_Period_Months__c * 30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warranty Expiry Date</label>
    <type>Date</type>
</CustomField>