force-app/main/default/objects/Service_Request_New__c/fields/Warranty_Period_Months__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Period_Months__c</fullName>
    <description>Number of months the performed service is covered under warranty from the completion date.</description>
    <label>Warranty Period Months</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>