force-app/main/default/objects/Service_Request_New__c/validationRules/Promised_Completion_Date_Too_Early.validationRule-meta.xml
<ValidationRule>
    <fullName>Promised_Completion_Date_Too_Early</fullName>
    <active>true</active>
    <description>The Promised Completion Date must be greater than or equal to the Requested Date.</description>
    <errorConditionFormula>Promised_Completion_Date__c   &lt;=   Requested_Date__c</errorConditionFormula>
    <errorMessage>The Promised Completion Date cannot be earlier than the Requested Date. Please select a valid date.</errorMessage>
</ValidationRule>